Simplified OAuthIdentity Azure AspNet.EntityFramework kept prompting for a new database migration.

--- a/src/Website/Web.config
+++ b/src/Website/Web.config
@@ -5,11 +5,11 @@
   -->
 <configuration>
   <configSections>
-    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <section name="system.identityModel" type="System.IdentityModel.Configuration.SystemIdentityModelSection, System.IdentityModel, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089" />
     <section name="system.identityModel.services" type="System.IdentityModel.Services.Configuration.SystemIdentityModelServicesSection, System.IdentityModel.Services, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089" />
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-Website-20150526114322.mdf;Initial Catalog=aspnet-Website-20150526114322;Integrated Security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
@@ -18,17 +18,19 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="databaseUsername" value="USERNAME"/>
-    <add key="databasePassword" value="NOT_THE_PASSWORD"/>
-    <add key="databaseUrl" value="DATABASE_URL"/>
-    <add key="twilioAccountSid" value="TWILIO_ID"/>
-    <add key="timezone" value="Pacific Standard Time"/>
-    <!-- <add key="autoUpdateDatabase" value="true" /> -->
+    <add key="timezone" value="Pacific Standard Time" />
+
     <!--
+    <add key="databaseUsername" value="USERNAME" />
+    <add key="databasePassword" value="NOT_THE_PASSWORD" />
+    <add key="databaseUrl" value="DATABASE_URL" />
+    <add key="twilioAccountSid" value="TWILIO_ID" />
+    <add key="memberLinkTemplate" value="DATABASE_URL/members/detail/{0}" />
     <add key="O365:ClientId" value="MY_CLIENTID_GUID" />
     <add key="O365:Authority" value="https://login.windows.net/MY_TENANT_NAME" />
     <add key="Google:ClientId" value="MY_LONG_STRING.apps.googleusercontent.com"/>
     <add key="Google:ClientSecret" value="MY_SECRET"/>
+    <add key="autoUpdateDatabase" value="true"/>
     -->
   </appSettings>
   <location path="Account">
@@ -45,6 +47,14 @@
       </authorization>
     </system.web>
   </location>
+  <!--
+    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
+
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.5" />
+      </system.Web>
+  -->
   <system.web>
     <authentication mode="None" />
     <authorization>
@@ -52,7 +62,8 @@
       <allow users="*" />
     </authorization>
     <compilation debug="true" targetFramework="4.5" />
-    <httpRuntime targetFramework="4.5" requestValidationMode="4.5" />
+    <httpRuntime />
+    <pages controlRenderingCompatibilityVersion="4.0" />
   </system.web>
   <system.webServer>
     <handlers>
@@ -61,10 +72,10 @@
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
-  <staticContent>
-    <remove fileExtension=".woff2" />
-    <mimeMap fileExtension=".woff2" mimeType="font/woff2" />
-  </staticContent>
+    <staticContent>
+      <remove fileExtension=".woff2" />
+      <mimeMap fileExtension=".woff2" mimeType="font/woff2" />
+    </staticContent>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
