Add Facebook auth

--- a/src/Website/Web.config
+++ b/src/Website/Web.config
@@ -30,6 +30,8 @@
     <add key="O365:Authority" value="https://login.windows.net/MY_TENANT_NAME" />
     <add key="Google:ClientId" value="MY_LONG_STRING.apps.googleusercontent.com"/>
     <add key="Google:ClientSecret" value="MY_SECRET"/>
+    <add key="Facebook:AppId" value="MY_LONG_STRING"/>
+    <add key="Facebook:AppSecret" value="MY_SECRET"/>
     <add key="autoUpdateDatabase" value="true"/>
     -->
   </appSettings>
