--- a/src/Website/Website.csproj
+++ b/src/Website/Website.csproj
@@ -134,7 +134,6 @@
     <Reference Include="System.Web.Abstractions" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Web.Routing" />
-    <Reference Include="System.Xml" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.EnterpriseServices" />
@@ -173,6 +172,8 @@
       <Private>True</Private>
       <HintPath>..\..\packages\Microsoft.AspNet.WebPages.3.2.2\lib\net45\System.Web.WebPages.Razor.dll</HintPath>
     </Reference>
+    <Reference Include="System.XML" />
+    <Reference Include="System.Xml.Linq" />
     <Reference Include="Twilio.Api">
       <HintPath>..\..\packages\Twilio.4.0.3\lib\3.5\Twilio.Api.dll</HintPath>
     </Reference>
@@ -283,6 +284,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Strings.resx</DependentUpon>
     </Compile>
+    <Compile Include="TestMemberSource.cs" />
     <Compile Include="TimeUtils.cs" />
     <Compile Include="TwilioExtensions.cs" />
   </ItemGroup>
