--- a/src/Website/packages.config
+++ b/src/Website/packages.config
@@ -20,6 +20,7 @@
   <package id="Microsoft.AspNet.WebApi" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Owin" version="5.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.2" targetFramework="net45" />
   <package id="Microsoft.IdentityModel.Protocol.Extensions" version="1.0.0" targetFramework="net45" />
@@ -36,6 +37,13 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
+  <package id="Ninject" version="3.2.2.0" targetFramework="net45" />
+  <package id="Ninject.Extensions.ContextPreservation" version="3.2.0.0" targetFramework="net45" />
+  <package id="Ninject.Extensions.NamedScope" version="3.2.0.0" targetFramework="net45" />
+  <package id="Ninject.Web.Common" version="3.2.3.0" targetFramework="net45" />
+  <package id="Ninject.Web.Common.OwinHost" version="3.2.3.0" targetFramework="net45" />
+  <package id="Ninject.Web.WebApi" version="3.2.4.0" targetFramework="net45" />
+  <package id="Ninject.Web.WebApi.OwinHost" version="3.2.4.0" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
   <package id="RestSharp" version="105.0.1" targetFramework="net45" />
