--- a/test/FakeTwilio/App.config
+++ b/test/FakeTwilio/App.config
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6"/>
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/>
     </startup>
+  <appSettings>
+    <!-- <add key="MissionLineUrl" value="https://MY.TESTSITE.COM/" /> -->
+  </appSettings>
 </configuration>
