--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 run.log*
+src/website/App_Data/*.?df
 
 # Build Folders (you can keep bin if you'd like, to store dlls and pdbs)
 [Bb]in/
@@ -40,7 +41,7 @@ x64/
 *.tli
 *.tlh
 *.tmp
-*.log
+*.log*
 *.vspscc
 *.vssscc
 .builds
