--- a/src/Website/packages.config
+++ b/src/Website/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AngularJS.Core" version="1.4.6" targetFramework="net46" />
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
   <package id="bootstrap" version="3.3.5" targetFramework="net46" />
   <package id="bootstrap-select" version="1.7.2" targetFramework="net45" />
