--- a/src/Website/packages.config
+++ b/src/Website/packages.config
@@ -1,11 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AngularJS.Animate" version="1.4.6" targetFramework="net46" />
   <package id="AngularJS.Core" version="1.4.6" targetFramework="net46" />
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
   <package id="bootstrap" version="3.3.5" targetFramework="net46" />
   <package id="bootstrap-select" version="1.7.2" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
-  <package id="jQuery" version="1.10.2" targetFramework="net45" />
+  <package id="jQuery" version="2.1.4" targetFramework="net46" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
   <package id="log4net" version="2.0.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net45" />
