--- a/src/Website/Website.csproj
+++ b/src/Website/Website.csproj
@@ -458,9 +458,11 @@
     <Content Include="Scripts\site\forms.js" />
     <Content Include="Scripts\site\ko-bindings.js" />
     <Content Include="Scripts\site\missionline-app.js" />
+    <Content Include="Scripts\site\models\signin-model.js" />
     <Content Include="Scripts\site\models\event-model.js" />
     <Content Include="Scripts\site\page\index.js" />
     <Content Include="Scripts\site\services\calls-service.js" />
+    <Content Include="Scripts\site\services\roster-service.js" />
     <Content Include="Scripts\site\services\events-service.js" />
     <Content Include="Scripts\site\services\modals-service.js" />
     <Content Include="Scripts\site\services\push-service.js" />
